--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="overlay"></div>
 
-    <h1>Internet Technology Assignment 4</h1>
+    <h1>DOM Manipulation With JS</h1>
 
     <div class="profile">
       <img
