--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     />
   </head>
   <body>
-    <div class="overlay"></div>
-
     <h1>DOM Manipulation With JS</h1>
 
     <div class="profile">
@@ -22,12 +20,43 @@
       />
       <h2>Kavindi Sathsarani</h2>
     </div>
-    <nav class="list">
-      <ol>
-        <li><a href="/pages/case-1.html" target="_blank">Case 1</a></li>
-        <li><a href="/pages/case-2.html" target="_blank">Case 2</a></li>
-        <li><a href="/pages/case-3.html" target="_blank">Case 3</a></li>
-      </ol>
-    </nav>
+
+    <div class="card-container">
+      <!-- Card 1 -->
+      <div class="card">
+        <img
+          src="/assests/images/Screenshot 2024-11-11 192521.png"
+          alt="Card Image 1"
+        />
+        <!-- Replace with your image URL -->
+        <div class="link-overlay">
+          <a href="/pages/case-1.html" target="_blank">Que-1</a>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="card">
+        <img
+          src="/assests/images/Screenshot 2024-11-11 192533.png"
+          alt="Card Image 2"
+        />
+        <!-- Replace with your image URL -->
+        <div class="link-overlay">
+          <a href="/pages/case-2.html" target="_blank">Que-2</a>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="card">
+        <img
+          src="/assests/images/Screenshot 2024-11-11 192546.png"
+          alt="Card Image 3"
+        />
+        <!-- Replace with your image URL -->
+        <div class="link-overlay">
+          <a href="/pages/case-3.html" target="_blank">Knight-rider-effect</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
